methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:3: error: not found: value c
    makeLine(c: Color)
             ^